--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=spring-security-oauth2-authorities-company-structure
+spring.profiles.active=dev,postgres
+logging.level.org.springframework.security.oauth2=debug
