fix: codes, packages & configs🫸🌀✏️📗🐧🐳

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=spring-security-oauth2-authorities-company-structure
-spring.profiles.active=dev,postgres
+spring.profiles.active=dev,h2
 logging.level.org.springframework.security.oauth2=debug
+spring.docker.compose.enabled=false
