--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/company-structure-spring-
 spring.datasource.username=yu71
 spring.datasource.password=53cret
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
-flyway.locations=db/migration/postgresql
-flyway.baselineOnMigrate=true
+spring.flyway.locations=classpath:db/migration/postgresql
+spring.flyway.baseline-on-migrate=true
