fix: codes, packages n configs🫸🌀✏️📗🐧🐳

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,9 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <mainClass>
+                        id.my.hendisantika.companystructure.SpringSecurityOauth2AuthoritiesCompanyStructureApplication
+                    </mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
