--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -2,10 +2,10 @@ spring.datasource.url=jdbc:h2:mem:company-structure-spring-security-oauth2-autho
 spring.datasource.username=yu71
 spring.datasource.password=53cret
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.h2.console.enabled=true
 spring.flyway.locations=classpath:db/migration/h2
 spring.flyway.baseline-on-migrate=true
